--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <span class="text">Seconds</span>
     </div>
     <div>
-        <span id="ampm">AM</span>
+        <span id="ampm"></span>
     </div>
     
     <script src="./index.js"></script>
